[gd_scene load_steps=36 format=1]

[ext_resource path="res://scripts/game.gd" type="Script" id=1]
[ext_resource path="res://assets/textures/background.tex" type="Texture" id=2]
[ext_resource path="res://assets/textures/main_panel.tex" type="Texture" id=3]
[ext_resource path="res://scripts/panel_quiz.gd" type="Script" id=4]
[ext_resource path="res://assets/fonts/luckiest_guy_290.fnt" type="BitmapFont" id=5]
[ext_resource path="res://btn_answer.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/fonts/luckiest_guy_70.fnt" type="BitmapFont" id=7]
[ext_resource path="res://assets/sounds/correct_answer.smp" type="Sample" id=8]
[ext_resource path="res://assets/sounds/success.smp" type="Sample" id=9]
[ext_resource path="res://assets/sounds/wrong_answer.smp" type="Sample" id=10]
[ext_resource path="res://assets/textures/timer.tex" type="Texture" id=11]
[ext_resource path="res://scripts/timer.gd" type="Script" id=12]
[ext_resource path="res://assets/textures/btn_quit.tex" type="Texture" id=13]
[ext_resource path="res://assets/textures/btn_quit_pressed.tex" type="Texture" id=14]
[ext_resource path="res://assets/textures/png/timer_bar_mask.png" type="Texture" id=15]
[ext_resource path="res://assets/textures/timer_particle.tex" type="Texture" id=16]
[ext_resource path="res://assets/textures/timer_bar.tex" type="Texture" id=17]
[ext_resource path="res://scripts/game_over_panel.gd" type="Script" id=18]
[ext_resource path="res://assets/textures/game_over_overlay.tex" type="Texture" id=19]
[ext_resource path="res://assets/textures/game_over_panel.tex" type="Texture" id=20]
[ext_resource path="res://assets/textures/btn_replay.tex" type="Texture" id=21]
[ext_resource path="res://assets/textures/btn_replay_pressed.tex" type="Texture" id=22]
[ext_resource path="res://assets/textures/btn_twitter.tex" type="Texture" id=23]
[ext_resource path="res://assets/textures/btn_twitter_pressed.tex" type="Texture" id=24]
[ext_resource path="res://assets/textures/btn_menu.tex" type="Texture" id=25]
[ext_resource path="res://assets/textures/btn_menu_pressed.tex" type="Texture" id=26]
[ext_resource path="res://assets/fonts/luckiest_guy_140.fnt" type="BitmapFont" id=27]
[ext_resource path="res://assets/fonts/luckiest_guy_65.fnt" type="BitmapFont" id=28]
[ext_resource path="res://assets/textures/medal.tex" type="Texture" id=29]

[sub_resource type="SampleLibrary" id=1]

samples/correct_answer = { "db":0.0, "pitch":1.0, "sample":ExtResource( 8 ) }
samples/success = { "db":0.0, "pitch":1.0, "sample":ExtResource( 9 ) }
samples/wrong_answer = { "db":0.0, "pitch":1.0, "sample":ExtResource( 10 ) }

[sub_resource type="Animation" id=2]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("game_over_panel:rect/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.1 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ Vector2( 1108, 0 ), Vector2( 0, 0 ) ] }
tracks/1/type = "value"
tracks/1/path = NodePath("game_over_panel:visibility/opacity")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0.1, 0.6 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ 0.0, 1.0 ] }
tracks/2/type = "value"
tracks/2/path = NodePath("game_over_panel/panel:rect/pos")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = { "times":FloatArray( 0.6, 0.9, 1 ), "transitions":FloatArray( 1, 4, 1 ), "update":0, "values":[ Vector2( 1101, 429 ), Vector2( 111, 429 ), Vector2( 151, 429 ) ] }

[sub_resource type="Animation" id=3]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("timer:rect/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0.6, 0.9 ), "transitions":FloatArray( 1, 0.25 ), "update":0, "values":[ Vector2( 0, -163 ), Vector2( 0, 0 ) ] }
tracks/1/type = "value"
tracks/1/path = NodePath("panel_quiz:rect/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0, 0.7 ), "transitions":FloatArray( -4, -4 ), "update":0, "values":[ Vector2( 21, -2018 ), Vector2( 21, -124 ) ] }

[sub_resource type="Animation" id=4]

resource/name = "new_highscore"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("game_over_panel/medal:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.3 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ 0.0, 1.0 ] }
tracks/1/type = "value"
tracks/1/path = NodePath("game_over_panel/medal:transform/scale")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0, 0.3 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ Vector2( 3, 3 ), Vector2( 1, 1 ) ] }
tracks/2/type = "value"
tracks/2/path = NodePath("panel_quiz/sample_player:play/play")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = { "times":FloatArray( 0.1 ), "transitions":FloatArray( 1 ), "update":2, "values":[ "success" ] }

[sub_resource type="Animation" id=5]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("timer:rect/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0.3, 0.5 ), "transitions":FloatArray( 4, 4 ), "update":0, "values":[ Vector2( 0, 0 ), Vector2( 0, -180 ) ] }
tracks/1/type = "value"
tracks/1/path = NodePath("panel_quiz:rect/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0.1, 0.7 ), "transitions":FloatArray( 4, 4 ), "update":0, "values":[ Vector2( 21, -124 ), Vector2( 21, -2014 ) ] }
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = { "times":FloatArray( 0.9 ), "transitions":FloatArray( 1 ), "values":[ { "args":[  ], "method":"end_of_outro" } ] }

[sub_resource type="Animation" id=6]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("game_over_panel/panel:rect/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0.1, 0.5 ), "transitions":FloatArray( 4, 4 ), "update":0, "values":[ Vector2( 151, 429 ), Vector2( 1121, 429 ) ] }
tracks/1/type = "value"
tracks/1/path = NodePath("game_over_panel/overlay:visibility/opacity")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0.2, 0.4 ), "transitions":FloatArray( 4, 4 ), "update":0, "values":[ 1.0, 0.0 ] }
tracks/2/type = "value"
tracks/2/path = NodePath("timer:rect/pos")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = { "times":FloatArray( 0.3, 0.5 ), "transitions":FloatArray( 4, 4 ), "update":0, "values":[ Vector2( 0, 0 ), Vector2( 0, -180 ) ] }
tracks/3/type = "value"
tracks/3/path = NodePath("panel_quiz:rect/pos")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = { "times":FloatArray( 0.1, 0.7 ), "transitions":FloatArray( 4, 4 ), "update":0, "values":[ Vector2( 21, -124 ), Vector2( 21, -2014 ) ] }
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = { "times":FloatArray( 0.9 ), "transitions":FloatArray( 1 ), "values":[ { "args":[  ], "method":"end_of_outro" } ] }

[node name="game" type="Node"]

script/script = ExtResource( 1 )

[node name="background" type="TextureFrame" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1080.0
margin/bottom = 1920.0
texture = ExtResource( 2 )
stretch_mode = 0

[node name="panel_quiz" type="TextureFrame" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 21.0
margin/top = -2018.0
margin/right = 1051.0
margin/bottom = -19.0
texture = ExtResource( 3 )
stretch_mode = 0
script/script = ExtResource( 4 )
__meta__ = { "_edit_group_":true }

[node name="lbl_question" type="Label" parent="panel_quiz"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 609.0
margin/right = 1042.0
margin/bottom = 901.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.398438, 0.398438, 0.398438, 1 )
text = "3 x 9"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="answer_1" parent="panel_quiz" instance=ExtResource( 6 )]

margin/left = 19.0
margin/top = -344.0
margin/right = -444.0
margin/bottom = 2279.0

[node name="answer_2" parent="panel_quiz" instance=ExtResource( 6 )]

margin/left = 429.0
margin/top = -344.0
margin/right = -34.0
margin/bottom = 2279.0

[node name="answer_3" parent="panel_quiz" instance=ExtResource( 6 )]

margin/left = 19.0
margin/top = 47.0
margin/right = -444.0
margin/bottom = 2670.0

[node name="answer_4" parent="panel_quiz" instance=ExtResource( 6 )]

margin/left = 429.0
margin/top = 47.0
margin/right = -34.0
margin/bottom = 2670.0

[node name="lbl_score" type="Label" parent="panel_quiz"]

rect/rotation = -2.33628
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 73.0
margin/top = 1836.0
margin/right = 459.0
margin/bottom = 1939.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.4, 0.223529, 0.145098, 1 )
custom_colors/font_color_shadow = Color( 0.729412, 0.533333, 0.454902, 1 )
custom_constants/shadow_offset_y = 5
text = "Score: 0"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="lbl_highscore" type="Label" parent="panel_quiz"]

rect/rotation = 1.87478
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 575.0
margin/top = 1858.0
margin/right = 961.0
margin/bottom = 1961.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.4, 0.223529, 0.145098, 1 )
custom_colors/font_color_shadow = Color( 0.729412, 0.533333, 0.454902, 1 )
custom_constants/shadow_offset_y = 5
text = "Best: 13"
align = 2
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="anim_player" type="AnimationPlayer" parent="panel_quiz"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="sample_player" type="SamplePlayer" parent="panel_quiz"]

config/polyphony = 1
config/samples = SubResource( 1 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0

[node name="timer" type="TextureFrame" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = -163.0
margin/right = 1080.0
margin/bottom = -9.0
texture = ExtResource( 11 )
stretch_mode = 0
script/script = ExtResource( 12 )

[node name="btn_quit" type="TextureButton" parent="timer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 942.0
margin/top = 2.0
margin/right = 1079.0
margin/bottom = 124.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 13 )
textures/pressed = ExtResource( 14 )

[node name="mask" type="Light2D" parent="timer"]

transform/pos = Vector2( 1379.05, 60.9473 )
enabled = true
editor_only = false
texture = ExtResource( 15 )
offset = Vector2( 0, 0 )
scale = 1.0
color = Color( 1, 1, 1, 0 )
energy = 17.51
mode = 3
range/height = 0.0
range/z_min = -1024
range/z_max = 1024
range/layer_min = 0
range/layer_max = 0
range/item_mask = 2
shadow/enabled = false
shadow/color = Color( 0, 0, 0, 0 )
shadow/buffer_size = 2048
shadow/esm_multiplier = 80.0
shadow/item_mask = 2

[node name="particles" type="Particles2D" parent="timer/mask"]

transform/pos = Vector2( -479.776, 2.7832 )
config/amount = 5
config/lifetime = 2.0
config/local_space = false
config/texture = ExtResource( 16 )
params/direction = 0.0
params/spread = 30.0
params/linear_velocity = 50.0
params/spin_velocity = 0.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 9.8
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 1.0
params/final_size = 0.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
randomness/initial_size = -0.12

[node name="bar" type="Sprite" parent="timer"]

visibility/light_mask = 2
transform/pos = Vector2( 468.208, 62.0498 )
texture = ExtResource( 17 )

[node name="game_over_panel" type="Control" parent="."]

process/pause_mode = 2
visibility/opacity = 0.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1108.0
margin/top = 0.0
margin/right = 1108.0
margin/bottom = 0.0
script/script = ExtResource( 18 )

[node name="overlay" type="TextureFrame" parent="game_over_panel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1080.0
margin/bottom = 1920.0
texture = ExtResource( 19 )
stretch_mode = 0

[node name="panel" type="TextureFrame" parent="game_over_panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1101.0
margin/top = 429.0
margin/right = 2106.0
margin/bottom = 1402.0
texture = ExtResource( 20 )
stretch_mode = 0

[node name="btn_replay" type="TextureButton" parent="game_over_panel/panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 241.0
margin/top = 780.0
margin/right = 554.0
margin/bottom = 1093.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 21 )
textures/pressed = ExtResource( 22 )

[node name="btn_twitter" type="TextureButton" parent="game_over_panel/panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -3.0
margin/top = 811.0
margin/right = 251.0
margin/bottom = 1065.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 23 )
textures/pressed = ExtResource( 24 )

[node name="btn_menu" type="TextureButton" parent="game_over_panel/panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 547.0
margin/top = 811.0
margin/right = 804.0
margin/bottom = 1068.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 25 )
textures/pressed = ExtResource( 26 )

[node name="lbl_score" type="Label" parent="game_over_panel/panel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 300.0
margin/top = 72.0
margin/right = 533.0
margin/bottom = 232.0
custom_fonts/font = ExtResource( 27 )
custom_colors/font_color = Color( 0.941406, 0.941406, 0.941406, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.169373 )
custom_constants/shadow_offset_y = 9
text = "23"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="lbl_highscore_txt" type="Label" parent="game_over_panel/panel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 120.0
margin/top = 400.0
margin/right = 494.0
margin/bottom = 476.0
custom_fonts/font = ExtResource( 28 )
custom_colors/font_color = Color( 0.4, 0.4, 0.4, 1 )
text = "HIGHSCORE"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="lbl_highscore" type="Label" parent="game_over_panel/panel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 512.0
margin/top = 400.0
margin/right = 675.0
margin/bottom = 476.0
custom_fonts/font = ExtResource( 28 )
custom_colors/font_color = Color( 0.4, 0.4, 0.4, 1 )
text = "26"
align = 2
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="lbl_correct_txt" type="Label" parent="game_over_panel/panel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 120.0
margin/top = 521.0
margin/right = 371.0
margin/bottom = 597.0
custom_fonts/font = ExtResource( 28 )
custom_colors/font_color = Color( 0.4, 0.4, 0.4, 1 )
text = "CORRECT"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="lbl_correct" type="Label" parent="game_over_panel/panel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 550.0
margin/top = 521.0
margin/right = 675.0
margin/bottom = 597.0
custom_fonts/font = ExtResource( 28 )
custom_colors/font_color = Color( 0.4, 0.4, 0.4, 1 )
text = "32"
align = 2
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="lbl_wrong_txt" type="Label" parent="game_over_panel/panel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 120.0
margin/top = 640.0
margin/right = 367.0
margin/bottom = 716.0
custom_fonts/font = ExtResource( 28 )
custom_colors/font_color = Color( 0.4, 0.4, 0.4, 1 )
text = "WRONG"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="lbl_wrong" type="Label" parent="game_over_panel/panel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 573.0
margin/top = 640.0
margin/right = 675.0
margin/bottom = 716.0
custom_fonts/font = ExtResource( 28 )
custom_colors/font_color = Color( 0.4, 0.4, 0.4, 1 )
text = "6"
align = 2
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="medal" type="Sprite" parent="game_over_panel"]

visibility/opacity = 0.0
transform/pos = Vector2( 885.929, 526.119 )
transform/scale = Vector2( 3, 3 )
texture = ExtResource( 29 )

[node name="anim_player" type="AnimationPlayer" parent="."]

process/pause_mode = 2
playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/game_over = SubResource( 2 )
anims/intro = SubResource( 3 )
anims/new_highscore = SubResource( 4 )
anims/outro = SubResource( 5 )
anims/outro_with_game_over = SubResource( 6 )
next/outro = ""
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "intro"

[connection signal="button_down" from="panel_quiz/answer_1" to="panel_quiz" method="_on_answer_1_button_down"]

[connection signal="button_down" from="panel_quiz/answer_2" to="panel_quiz" method="_on_answer_2_button_down"]

[connection signal="button_down" from="panel_quiz/answer_3" to="panel_quiz" method="_on_answer_3_button_down"]

[connection signal="button_down" from="panel_quiz/answer_4" to="panel_quiz" method="_on_answer_4_button_down"]

[connection signal="pressed" from="timer/btn_quit" to="." method="_on_btn_quit_pressed"]

[connection signal="pressed" from="game_over_panel/panel/btn_replay" to="." method="_on_btn_replay_pressed"]

[connection signal="pressed" from="game_over_panel/panel/btn_twitter" to="." method="_on_btn_twitter_pressed"]

[connection signal="pressed" from="game_over_panel/panel/btn_menu" to="." method="_on_btn_menu_pressed"]


